[tool.poetry]
name = "warriortiming"
version = "0.1.0"
description = "A tool to calculate optimial warrior timings from warcraft logs"
authors = ["Barry Sheppard <barrysheppard@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
requests = "^2.24.0"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
